welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
answerCell:4: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (isAsleep==true) {
         ^